tests/integration/tests/di/ui/fail/injectable_factory_invalid_scope.stderr
error: Invalid scope. Expected 'singleton', 'request', or 'transient'
  --> tests/di/ui/fail/injectable_factory_invalid_scope.rs:14:22
   |
14 | #[injectable(scope = "invalid_scope")]
   |                      ^^^^^^^^^^^^^^^
